clusters/on-prem/core/monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
  labels:
    app: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      containers:
        - name: kube-state-metrics
          image: bitnami/kube-state-metrics:latest@sha256:1160c7c3da01222c9dfedb0dcfada7e071924295e0babf5d19f7cb2c102658c5
          ports:
          - containerPort: 8080
            name: http-metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
      serviceAccountName: kube-state-metrics
