clusters/on-prem/core/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics-service
  namespace: monitoring
spec:
  selector:
    app: kube-state-metrics
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
